# pdf2epub

./: .gitignore  README.md  pyproject.toml
src/pdf2epub/: __init__.py  cli.py  converter.py  marker_step.py  pandoc_step.py  utils.py
src/pdf2epub.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  test_converter.py  test_marker_step.py  test_pandoc_step.py  test_utils.py
